kubernetes/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocery-list-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grocery-list
  template:
    metadata:
      labels:
        app: grocery-list
    spec:
      containers:
      - name: grocery-list-container
        image: bngnlyrise8/grocery-list:0.1
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: grocery-list-service
spec:
  selector:
    app: grocery-list
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grocery-list-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grocery-list-service
            port:
              number: 3000
